--- a/Mobile Game/Mobile Game.CSharp.csproj
+++ b/Mobile Game/Mobile Game.CSharp.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\ArrowController.cs" />
     <Compile Include="Assets\Leftover Assets\Standard Assets\Characters\FirstPersonCharacter\Scripts\FirstPersonController.cs" />
     <Compile Include="Assets\Leftover Assets\Standard Assets\Characters\FirstPersonCharacter\Scripts\HeadBob.cs" />
     <Compile Include="Assets\Leftover Assets\Standard Assets\Characters\FirstPersonCharacter\Scripts\MouseLook.cs" />
