--- a/Mobile Game/Mobile Game.CSharp.csproj
+++ b/Mobile Game/Mobile Game.CSharp.csproj
@@ -124,12 +124,13 @@
     <Compile Include="Assets\Leftover Assets\Standard Assets\Utility\TimedObjectDestructor.cs" />
     <Compile Include="Assets\Leftover Assets\Standard Assets\Utility\WaypointCircuit.cs" />
     <Compile Include="Assets\Leftover Assets\Standard Assets\Utility\WaypointProgressTracker.cs" />
-    <Compile Include="Assets\ScoreController.cs" />
     <Compile Include="Assets\Scripts\AIController.cs" />
     <Compile Include="Assets\Scripts\ArrowController.cs" />
     <Compile Include="Assets\Scripts\GameController.cs" />
     <Compile Include="Assets\Scripts\MouseAim.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\ScoreController.cs" />
+    <Compile Include="Assets\Scripts\TitleController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Leftover Assets\BrokenVector\FreeLowPolyPack\readme.txt" />
